--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
      </div>
     </div>
     <div class="turn">
-     <p class="x-color"><span>𝓧</span> TURN</p>
+     <div class="turnCharacter"></div>
+     <p>&nbsp;TURN</p>
     </div>
     <button class="retry">
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
@@ -30,16 +31,16 @@
    <section class="board"></section>
    <section class="scoreBoard">
     <div class="x-bg">
-     <p class="scoreBoard-text">X(you)</p>
-     <p>0</p>
+     <p class="scoreBoard-text">X(P1)</p>
+     <p class="scoreBoard-value">0</p>
     </div>
     <div class="ties-bg">
      <p class="scoreBoard-text">Ties</p>
-     <p>0</p>
+     <p class="scoreBoard-value">0</p>
     </div>
     <div class="o-bg">
-     <p class="scoreBoard-text">O(cpu)</p>
-     <p>5</p>
+     <p class="scoreBoard-text">O(P2)</p>
+     <p class="scoreBoard-value">0</p>
     </div>
    </section>
   </div>
