fix: fix folder mistake

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     </div>
    </section>
   </div>
+  <dialog class="gameOption">
+   <div>hello</div>
+  </dialog>
   <script type="module" src="/src/main.ts"></script>
  </body>
 </html>
