feat: implement game dialog for win conditions and update UI interactions

--- a/index.html
+++ b/index.html
@@ -44,8 +44,18 @@
     </div>
    </section>
   </div>
-  <dialog class="gameOption">
-   <div>hello</div>
+  <dialog class="gameDialog">
+   <div class="gameOption">
+    <div class="dialog-text-color you-won">YOU WON!</div>
+    <div class="dialog-text-color winner">
+     <div class="winnerCharacter"></div>
+     <p>&nbsp;TAKES THIS ROUND</p>
+    </div>
+    <div class="buttons">
+     <button class="scoreBoard-text ties-bg quit-button">QUIT</button>
+     <button class="scoreBoard-text o-bg continue-button">NEXT ROUND</button>
+    </div>
+   </div>
   </dialog>
   <script type="module" src="/src/main.ts"></script>
  </body>
